<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.okocraft.dailyrewards</groupId>
    <artifactId>dailyrewards</artifactId>
    <version>1.2.0-SNAPSHOT</version>
    
    <name>DailyRewards</name>
    <url>https://github.com/okocraft/DailyRewards</url>

    <licenses>
        <license>
            <name>APACHE LICENSE, VERSION 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/okocraft/DailyRewards.git</connection>
        <developerConnection>scm:git@github.com:okocraft/DailyRewards.git</developerConnection>
        <url>https://github.com/okocraft/DailyRewards</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/okocraft/DailyRewards/issues</url>
    </issueManagement>

    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://github.com/okocraft/DailyRewards/runs</url>
    </ciManagement>

    <properties>
        <project.charset>UTF-8</project.charset>
        <java.version>21</java.version>
        <project.build.sourceEncoding>${project.charset}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.charset}</project.reporting.outputEncoding>
    </properties>

    <repositories>
        <repository>
            <id>paper-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.11-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean package</defaultGoal>

        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources/</directory>
            </resource>
        </resources>

        <finalName>${project.name}-${project.version}</finalName>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.charset}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
            </plugin>
        </plugins>
    </build>
</project>
